--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "dependencies": {
     "@e22m4u/js-format": "~0.2.0",
     "@e22m4u/js-service": "~0.4.2",
-    "@e22m4u/ts-openapi": "~0.1.10"
+    "@e22m4u/ts-openapi": "~0.1.10",
+    "@e22m4u/ts-reflector": "~0.1.8"
   },
   "peerDependencies": {
     "@e22m4u/ts-rest-router": "~0.6.0"
@@ -50,11 +51,10 @@
   "devDependencies": {
     "@commitlint/cli": "~20.1.0",
     "@commitlint/config-conventional": "~20.0.0",
-    "@e22m4u/ts-reflector": "^0.1.7",
     "@eslint/js": "~9.37.0",
     "@types/chai": "~5.2.2",
     "@types/mocha": "~10.0.10",
-    "@types/node": "~24.6.2",
+    "@types/node": "~24.7.0",
     "c8": "~10.1.3",
     "chai": "~6.2.0",
     "esbuild": "~0.25.10",
@@ -69,6 +69,6 @@
     "rimraf": "~6.0.1",
     "tsx": "~4.20.6",
     "typescript": "~5.9.3",
-    "typescript-eslint": "~8.45.0"
+    "typescript-eslint": "~8.46.0"
   }
 }
