--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@e22m4u/js-data-schema": "~0.4.6",
     "@e22m4u/js-format": "~0.2.0",
-    "@e22m4u/js-service": "~0.4.2",
+    "@e22m4u/js-service": "~0.4.3",
     "@e22m4u/ts-openapi": "~0.1.10",
     "@e22m4u/ts-reflector": "~0.1.8"
   },
   "peerDependencies": {
-    "@e22m4u/ts-rest-router": "~0.6.0"
+    "@e22m4u/ts-rest-router": "~0.6.4"
   },
   "devDependencies": {
     "@commitlint/cli": "~20.1.0",
@@ -54,7 +55,7 @@
     "@eslint/js": "~9.37.0",
     "@types/chai": "~5.2.2",
     "@types/mocha": "~10.0.10",
-    "@types/node": "~24.7.0",
+    "@types/node": "~24.7.2",
     "c8": "~10.1.3",
     "chai": "~6.2.0",
     "esbuild": "~0.25.10",
@@ -69,6 +70,6 @@
     "rimraf": "~6.0.1",
     "tsx": "~4.20.6",
     "typescript": "~5.9.3",
-    "typescript-eslint": "~8.46.0"
+    "typescript-eslint": "~8.46.1"
   }
 }
