--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e22m4u/ts-rest-router-openapi",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Генератор OpenAPI документации для REST-маршрутизатора",
   "author": "Mikhail Evstropov <e22m4u@yandex.ru>",
   "license": "MIT",
@@ -40,7 +40,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@e22m4u/js-data-schema": "~0.4.7",
+    "@e22m4u/ts-data-schema": "~0.4.9",
     "@e22m4u/js-format": "~0.2.1",
     "@e22m4u/js-service": "~0.4.6",
     "@e22m4u/ts-openapi": "~0.1.11",
@@ -55,10 +55,10 @@
     "@eslint/js": "~9.39.1",
     "@types/chai": "~5.2.3",
     "@types/mocha": "~10.0.10",
-    "@types/node": "~24.10.0",
+    "@types/node": "~24.10.1",
     "c8": "~10.1.3",
-    "chai": "~6.2.0",
-    "esbuild": "~0.25.12",
+    "chai": "~6.2.1",
+    "esbuild": "~0.27.0",
     "eslint": "~9.39.1",
     "eslint-config-prettier": "~10.1.8",
     "eslint-plugin-chai-expect": "~3.1.0",
@@ -70,6 +70,6 @@
     "rimraf": "~6.1.0",
     "tsx": "~4.20.6",
     "typescript": "~5.9.3",
-    "typescript-eslint": "~8.46.3"
+    "typescript-eslint": "~8.46.4"
   }
 }
